# otus_rust

./: README.md
house-with-http/: .env  Cargo.toml  Readme.MD  cargo.toml  docker-compose.yml
house-with-http/client/: cargo.toml
house-with-http/client/examples/: smart_house.rs
house-with-http/client/src/: errors.rs  lib.rs  store.rs
house-with-http/http-api/: Cargo.toml
house-with-http/http-api/src/: main.rs
house-with-http/http-api/src/models/: house_model.rs  mod.rs
house-with-http/http_api/: Cargo.toml
house-with-http/http_api/src/: controller.rs  db.rs  house.rs  lib.rs  main.rs
house-with-http/http_api/src/controllers/: house_controller.rs  mod.rs
house-with-http/http_api/src/db/: house_repo.rs
house-with-http/http_api/src/models/: room_model.rs
house-with-http/http_api/src/repository/: house_repo.rs
house-with-http/models/: cargo.toml
house-with-http/models/src/: device.rs  device_info.rs  lib.rs  room.rs
house-with-http/src/: db.rs  house.rs  house_web.rs  main.rs
house-with-http/src/controllers/: house_controller.rs  mod.rs  room_controller.rs
house-with-http/src/models/: device_model.rs  house_model.rs  mod.rs  room_model.rs
house-with-http/src/repository/: house_repo.rs  mod.rs  mongo.rs  room_repo.rs
patterns/src/: main.rs
smart-house-2/: Cargo.toml
smart-house-2/src/: device.rs  errors.rs  house.rs  lib.rs  main.rs  socket.rs  store.rs  switcher.rs  thermometer.rs
smart_house/src/: device.rs  house.rs  lib.rs  main.rs  room.rs  switcher.rs  thermometer.rs
socket_with_tcp/: Makefile  cargo.toml
(+29 files in other folders)
