[package]
name = "house-with-http"
version = "0.1.0"
edition = "2021"
authors = ["Andrey Khalepov"]
description = "Smart house with http API and mongodb"

[dependencies]
actix-web = "4.1.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
mongodb = "2.3.0"
serde = { version = "1", features = ["derive"]}
thiserror = "1.0.33"
